--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    //example username and password for connection string
+    "Default": "Server=127.0.0.1;Port=5432;Database=appDb;User Id=postgres;Password=somepassword;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
